--- a/public/popup.html
+++ b/public/popup.html
@@ -137,7 +137,8 @@
       <br/>
       <a href="https://discord.gg/QnmVMpU" target="_blank" rel="noopener">Discord</a> |
       <a href="https://matrix.to/#/+sponsorblock:ajay.app" target="_blank" rel="noopener">Matrix</a> |
-      <a id="helpButton" style="cursor: pointer;">__MSG_help__</a>
+      <a id="helpButton" style="cursor: pointer;">__MSG_help__</a> |
+      <a href="https://sponsor.ajay.app/donate" target="_blank" rel="noopener">$</a>
     </footer>
 
     <button id="showNoticeAgain" style="display: none" class="dangerButton popupElement">__MSG_showNotice__</button>
