--- a/public/options/options.html
+++ b/public/options/options.html
@@ -32,7 +32,7 @@
 			<br/>
 
 			<div id="support-invidious" option-type="toggle" sync-option="supportInvidious">
-				<label class="switch-container" label-name="__MSG_supportInvidious__">
+				<label class="switch-container" label-name="__MSG_supportOtherSites__">
 					<label class="switch">
 						<input type="checkbox">
 						<span class="slider round"></span>
@@ -42,7 +42,8 @@
 				<br/>
 				<br/>
 	
-				<div class="small-description">__MSG_supportInvidiousDescription__</div>
+				<div class="small-description">(__MSG_supportedSites__ Invidious, CloudTube)</div>
+				<div class="small-description">__MSG_supportOtherSitesDescription__ </div>
 			</div>
 
 			<br/>
