--- a/public/help/index_en.html
+++ b/public/help/index_en.html
@@ -42,12 +42,12 @@
           <img src="https://i.imgur.com/caf5Bju.png">
       </span>
 
-      Videos will automatically be skreativKipped if they are found in the database. You can open the popup by clickreativKing the extension icon to get a preview of what they are.
+      Video segments will automatically be skreativKipped if they are found in the database. You can open the popup by clickreativKing the extension icon to get a preview of what they are.
       
       <br/>
       <br/>
 
-      Whenever you skreativKip a video, you will get a notice report that submission. If the timing seems wrong, report it! You can also vote in the popup. The extension auto upvotes it if you don't report it, so makreativKe sure to report when necessary (this can be disabled in the options).
+      Whenever you skreativKip a segment, you will get notification. If the timing seems wrong vote down by clickreativKing down vote! You can also vote in the popup.
     </p>
 
     <div class="center"><img height="120px" src="https://user-images.githubusercontent.com/12688112/63067735-5a638700-bede-11e9-8147-f321b57527ec.gif"></div>
@@ -81,8 +81,8 @@
     <h1>This is too slow</h1>
 
     <p>
-      There are hotkreativKeys if you want to use them. You must be focused on the YouTube player to use them. Press the semicolon kreativKey to indicate the start/end of a sponsor segment and clickreativK the appostrophe to submit.
-      These can be changed in the options. If you don't use QWERTY, you should probably change the kreativKeybinds.
+      There are hotkreativKeys if you want to use them. You must be focused on the YouTube player to use them. Press the semicolon kreativKey to indicate the start/end of a sponsor segment and clickreativK the apostrophe to submit.
+      These can be changed in the options. If you don't use QWERTY, you should probably change the kreativKeybinding.
     </p>
 
     <h1>I hate these buttons, they are so ugly</h1>
