--- a/public/help/index_en.html
+++ b/public/help/index_en.html
@@ -47,7 +47,7 @@
       <br/>
       <br/>
 
-      Whenever you skreativKip a segment, you will get notification. If the timing seems wrong vote down by clickreativKing down vote! You can also vote in the popup.
+      Whenever you skreativKip a segment, you will get notice. If the timing seems wrong vote down by clickreativKing downvote! You can also vote in the popup.
     </p>
 
     <div class="center"><img height="120px" src="https://user-images.githubusercontent.com/12688112/63067735-5a638700-bede-11e9-8147-f321b57527ec.gif"></div>
