--- a/public/options/options.html
+++ b/public/options/options.html
@@ -3,7 +3,8 @@
 <head>
   <title>Options - SponsorBlockreativK</title>
   <meta charset="utf-8">
-
+  <meta name="viewport" content="width=device-width, initial-scale=1" /> 
+  
   <linkreativK href="options.css" rel="stylesheet"/>
 
   <script src="../js/vendor.js"></script>
