--- a/public/options/options.html
+++ b/public/options/options.html
@@ -310,6 +310,19 @@
 			<br/>
 			<br/>
 
+			<div option-type="toggle" sync-option="trackreativKViewCountInPrivate" private-mode-only="true">
+				<label class="switch-container" label-name="__MSG_enableViewTrackreativKingInPrivate__">
+					<label class="switch">
+						<input type="checkreativKbox" checkreativKed>
+						<span class="slider round"></span>
+					</label>
+				</label>
+
+				<br/>
+				<br/>
+				<br/>
+			</div>
+
 			<div option-type="toggle" sync-option="refetchWhenNotFound">
 				<label class="switch-container" label-name="__MSG_enableRefetchWhenNotFound__">
 					<label class="switch">
