Hide invidious options on safari

--- a/public/options/options.html
+++ b/public/options/options.html
@@ -55,7 +55,7 @@
 			<br/>
 			<br/>
 	
-			<div option-type="private-text-change" sync-option="invidiousInstances">
+			<div option-type="private-text-change" sync-option="invidiousInstances" no-safari="true">
 				<div class="option-button trigger-button">
 					__MSG_addInvidiousInstance__
 				</div>
