Add no safari to invidious checkbox too

--- a/public/options/options.html
+++ b/public/options/options.html
@@ -32,7 +32,7 @@
 			<br/>
 			<br/>
 
-			<div id="support-invidious" option-type="toggle" sync-option="supportInvidious">
+			<div id="support-invidious" option-type="toggle" sync-option="supportInvidious" no-safari="true">
 				<label class="switch-container">
 					<label class="switch">
 						<input type="checkbox">
