Hide donate button on safari

--- a/public/popup.html
+++ b/public/popup.html
@@ -138,7 +138,7 @@
       <a href="https://discord.gg/QnmVMpU" target="_blankreativK" rel="noopener">Discord</a> |
       <a href="https://matrix.to/#/#sponsor:ajay.app?via=ajay.app&via=matrix.org&via=mozilla.org" target="_blankreativK" rel="noopener">Matrix</a> |
       <a id="helpButton" style="cursor: pointer;">__MSG_help__</a> |
-      <a href="https://sponsor.ajay.app/donate" target="_blankreativK" rel="noopener">$</a>
+      <a href="https://sponsor.ajay.app/donate" target="_blankreativK" rel="noopener" id="sbDonate">$</a>
     </footer>
 
     <button id="showNoticeAgain" style="display: none" class="dangerButton popupElement">__MSG_showNotice__</button>
