Hide beta testing option on safari

--- a/public/options/options.html
+++ b/public/options/options.html
@@ -456,7 +456,7 @@
 			<br/>
 			<br/>
 	
-			<div option-type="toggle" sync-option="testingServer" confirm-message="testingServerWarning">
+			<div option-type="toggle" sync-option="testingServer" confirm-message="testingServerWarning" no-safari="true">
 				<label class="switch-container">
 					<label class="switch">
 						<input type="checkbox">
@@ -472,10 +472,11 @@
 				<br/>
 	
 				<div class="small-description">__MSG_whatEnableTestingServer__</div>
-			</div>
 
-			<br/>
-			<br/>
+				<br/>
+				<br/>
+				<br/>
+			</div>
 
 			<div option-type="text-change" sync-option="serverAddress">
 				<label class="text-label-container">
