--- a/public/options/options.html
+++ b/public/options/options.html
@@ -154,6 +154,20 @@
 
 			<br/>
 			<br/>
+
+			<div option-type="number-change" sync-option="skipNoticeDuration">
+				<label class="number-container">
+					<input type="number" step="0.1" min="1">
+				</label>
+
+				<br/>
+				<br/>
+
+				<div class="small-description">__MSG_skipNoticeDurationDescription__</div>
+			</div>
+
+			<br/>
+			<br/>
 	
 			<div option-type="number-change" sync-option="minDuration">
 				<label class="number-container">
