Add option to not auto-hide info button

--- a/public/options/options.html
+++ b/public/options/options.html
@@ -198,6 +198,7 @@
 			<br/>
 			<br/>
 			<br/>
+			<br/>
 
 			<div option-type="toggle" sync-option="forceChannelCheck">
 				<label class="switch-container">
@@ -258,9 +259,27 @@
 	
 				<div class="small-description">__MSG_whatInfoButton__</div>
 			</div>
+
+			<br/>
+			<br/>
+
+			<div option-type="toggle" toggle-type="reverse" sync-option="autoHideInfoButton" if-false="hideInfoButtonPlayerControls">
+				<label class="switch-container">
+					<label class="switch">
+						<input type="checkbox" checked>
+						<span class="slider round"></span>
+					</label>
+					<div class="switch-label">
+						__MSG_autoHideInfoButton__
+					</div>
+				</label>
 	
-			<br/>
-			<br/>
+				<br/>
+				<br/>
+				<br/>
+
+				<br/>
+			</div>
 	
 			<div option-type="toggle" toggle-type="reverse" sync-option="hideDeleteButtonPlayerControls">
 				<label class="switch-container">
