Fix autoHideInfoButton being reversed

--- a/public/options/options.html
+++ b/public/options/options.html
@@ -263,7 +263,7 @@
 			<br/>
 			<br/>
 
-			<div option-type="toggle" toggle-type="reverse" sync-option="autoHideInfoButton" if-false="hideInfoButtonPlayerControls">
+			<div option-type="toggle" sync-option="autoHideInfoButton" if-false="hideInfoButtonPlayerControls">
 				<label class="switch-container">
 					<label class="switch">
 						<input type="checkbox" checked>
