Update db link in help page

--- a/public/help/index_en.html
+++ b/public/help/index_en.html
@@ -94,7 +94,7 @@
     <h1>Can I get a copy of the Database? What happens if you disappear?</h1>
 
     <p>
-      The database is public and available at <a href="https://sponsor.ajay.app/database.db">https://sponsor.ajay.app/database.db</a>. The source code is freely available. So, even if something happens to me, your submissions are not lost.
+      The database is public and available at <a href="https://sponsor.ajay.app/database">https://sponsor.ajay.app/database</a> and the source code is freely available. So, even if something happens to me, your submissions are not lost.
     </p>
 
     <h1>News and how it is made</h1>
