Add skipping all segments when a non music segment exists

--- a/public/options/options.html
+++ b/public/options/options.html
@@ -29,6 +29,22 @@
 
 			</div>
 
+			<div option-type="toggle" sync-option="autoSkreativKipOnMusicVideos">
+				<label class="switch-container">
+					<label class="switch">
+						<input type="checkreativKbox" checkreativKed>
+						<span class="slider round"></span>
+					</label>
+					<div class="switch-label">
+						__MSG_autoSkreativKipOnMusicVideos__
+					</div>
+				</label>
+
+				<br/>
+				<br/>
+				<br/>
+			</div>
+
 			<br/>
 			<br/>
 
