--- a/public/help/index_en.html
+++ b/public/help/index_en.html
@@ -22,13 +22,13 @@
         Thanks for installing SponsorBlock. By using this extension, you agree to the <a href="https://gist.github.com/ajayyy/aa9f8ded2b573d4f73a3ffa0ef74f796">Privacy Policy</a> and <a href="https://gist.github.com/ajayyy/9e8100f069348e0bc062641f34d6af12">Terms of Use</a>.
     </p>
 
-    <p class="projectPreview">
+    <p>
 	      Come contribute, make some suggestions and help out on <a href="https://discord.gg/QnmVMpU">Discord</a> or on <a href="https://matrix.to/#/#sponsor:ajay.app?via=ajay.app&via=matrix.org&via=mozilla.org">Matrix</a>.
     </p>
 
-    <p style="margin-bottom: 0" class="bigText center">Please review the options below</p>
+    <p style="margin-bottom: 0; margin-top: 0" class="bigText center">Please review the options below</p>
 
-    <p>
+    <p class="smallText">
       Many features are disabled by default. If you want to skip intros, outros, use Invidious, etc., enable them below.
       You can also hide/show UI elements.
     </p>
