--- a/public/options/options.html
+++ b/public/options/options.html
@@ -210,9 +210,21 @@
 					</div>
 				</label>
 			</div>
+
+			<br/>
+			<br/>
+			<br/>
+
+			<div option-type="selector" sync-option="noticeVisibilityMode">
+				<select class="selector-element optionsSelector" >
+					<option value="0">__MSG_noticeVisibilityMode0__</option>
+					<option value="1">__MSG_noticeVisibilityMode1__</option>
+					<option value="2">__MSG_noticeVisibilityMode2__</option>
+					<option value="3">__MSG_noticeVisibilityMode3__</option>
+					<option value="4">__MSG_noticeVisibilityMode4__</option>
+				</select>
+			</div>
 	
-			<br/>
-			<br/>
 			<br/>
 			<br/>
 
