Add option to disable $ link

--- a/public/help/index_en.html
+++ b/public/help/index_en.html
@@ -5,6 +5,9 @@
   <meta charset="utf-8">
 
   <link href="styles.css" rel="stylesheet"/>
+
+  <script src="../js/vendor.js"></script>
+  <script src="../js/help.js"></script>
 </head>
 
 <body>
@@ -16,7 +19,11 @@
 
   <div class="container">
 
-    <p class="createdBy">Created By <a href="https://ajay.app">Ajay Ramachandran</a> <img src="https://ajay.app/newprofilepic.jpg" height="30" class="profilepiccircle"/></p>
+    <p class="createdBy">
+      <img src="https://ajay.app/newprofilepic.jpg" height="30" class="profilepiccircle"/>
+      Created By <a href="https://ajay.app">Ajay Ramachandran</a> 
+      <a href="https://sponsor.ajay.app/donate" target="_blank" rel="noopener" id="sbDonate">(Donate)</a>
+    </p>
 
     <p>
         Thanks for installing SponsorBlock. By using this extension, you agree to the <a href="https://gist.github.com/ajayyy/aa9f8ded2b573d4f73a3ffa0ef74f796">Privacy Policy</a> and <a href="https://gist.github.com/ajayyy/9e8100f069348e0bc062641f34d6af12">Terms of Use</a>.
