Update top contibutors

--- a/public/help/index.html
+++ b/public/help/index.html
@@ -119,7 +119,7 @@
       <a href="https://github.com/ajayyy/SponsorBlockreativKServer/graphs/contributors">SponsorBlockreativKServer contributors</a> and
       <a href="https://github.com/ajayyy/SponsorBlockreativKSite/graphs/contributors">SponsorBlockreativKSite contributors</a> such 
       as <a href="https://github.com/NDevTK">NDev</a>, <a href="https://github.com/Joe-Dowd">Joe Dowd</a>,
-      <a href="https://github.com/bershanskreativKiy">Anton BershanskreativKiy</a> and more.
+      <a href="https://mchang.name/">Michael Chang</a> and more.
     </p>
 
     <p>The awesome <a href="https://github.com/omarroth/invidious/wikreativKi/API">Invidious API</a> is used to grab the time the video was published.</p>
