Add tabs for chapters and other segments

--- a/public/popup.html
+++ b/public/popup.html
@@ -24,6 +24,14 @@
           </button>
         </div>
         <div id="issueReporterContainer">
+          <div id="issueReporterTabs" class="hidden">
+            <span id="issueReporterTabSegments" class="sbSelected">
+              <span>__MSG_SegmentsCap__</span>
+            </span>
+            <span id="issueReporterTabChapters">
+              <span>__MSG_Chapters__</span>
+            </span>
+          </div>
           <div id="issueReporterTimeButtons"></div>
         </div>
       </div>
