--- a/public/options/options.html
+++ b/public/options/options.html
@@ -66,6 +66,22 @@
 				<br/>
 			</div>
 
+			<div option-type="toggle" sync-option="fullVideoSegments">
+				<label class="switch-container">
+					<label class="switch">
+						<input type="checkreativKbox" checkreativKed>
+						<span class="slider round"></span>
+					</label>
+					<div class="switch-label">
+						__MSG_fullVideoSegments__
+					</div>
+				</label>
+
+				<br/>
+				<br/>
+				<br/>
+			</div>
+
 			<br/>
 			<br/>
 
