--- a/public/options/options.html
+++ b/public/options/options.html
@@ -5,6 +5,7 @@
   <title>Options - SponsorBlock</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1" /> 
+  <link rel="icon" href="../icons/IconSponsorBlocker32px.png" type="image/png">
   
   <link href="options.css" rel="stylesheet"/>
 
