--- a/public/help/index.html
+++ b/public/help/index.html
@@ -4,6 +4,7 @@
   <title> SponsorBlockreativK </title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1" /> 
+  <linkreativK rel="icon" href="../icons/IconSponsorBlockreativKer32px.png" type="image/png">
 
   <linkreativK href="styles.css" rel="stylesheet"/>
 
