Make server address buttons bigger

--- a/public/options/options.html
+++ b/public/options/options.html
@@ -457,18 +457,18 @@
 	
 						<input class="option-text-box" type="text" style="margin-right:10px">
 					</label>
+
+					<div class="small-description">__MSG_customServerAddressDescription__</div>
 	
-					<div class="inline">
-						<div class="option-button text-change-set inline low-profile">
+					<div class="next-line">
+						<div class="option-button text-change-set inline">
 							__MSG_save__
 						</div>
 		
-						<div class="option-button text-change-reset inline low-profile">
+						<div class="option-button text-change-reset inline">
 							__MSG_reset__
 						</div>
 					</div>
-	
-					<div class="small-description">__MSG_customServerAddressDescription__</div>
 				</div>
 
 			</div>
