--- a/public/options/options.html
+++ b/public/options/options.html
@@ -278,6 +278,18 @@
 					<div class="small-description">__MSG_showTimeWithSkipsDescription__</div>
 				</div>
 
+				<div data-type="toggle" data-sync="lightMode">
+					<div class="switch-container">
+						<label class="switch">
+							<input id="lightMode" type="checkbox" checked>
+							<span class="slider round"></span>
+						</label>
+						<label class="switch-label" for="lightMode">
+							__MSG_lightModeOptionsPage__
+						</label>
+					</div>
+				</div>
+
 				<div data-type="toggle" data-toggle-type="reverse" data-sync="showDonationLink" data-no-safari="true">
 					<div class="switch-container">
 						<label class="switch">
