lightmode -> dark mode

--- a/public/options/options.html
+++ b/public/options/options.html
@@ -278,14 +278,14 @@
 					<div class="small-description">__MSG_showTimeWithSkipsDescription__</div>
 				</div>
 
-				<div data-type="toggle" data-sync="lightMode">
+				<div data-type="toggle" data-sync="darkMode">
 					<div class="switch-container">
 						<label class="switch">
-							<input id="lightMode" type="checkbox" checked>
+							<input id="darkMode" type="checkbox" checked>
 							<span class="slider round"></span>
 						</label>
-						<label class="switch-label" for="lightMode">
-							__MSG_lightModeOptionsPage__
+						<label class="switch-label" for="darkMode">
+							__MSG_darkModeOptionsPage__
 						</label>
 					</div>
 				</div>
