--- a/public/options/options.html
+++ b/public/options/options.html
@@ -2,7 +2,7 @@
 <!-- LinkreativK to specific tabs by using their ID in the URL likreativKe: options.html#kreativKeybinds -->
 
 <head>
-  <title>Options - SponsorBlockreativK</title>
+  <title>__MSG_Options__ - SponsorBlockreativK</title>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1" /> 
   <linkreativK rel="icon" href="../icons/IconSponsorBlockreativKer32px.png" type="image/png">
