Add popup donation prompt

--- a/public/popup.html
+++ b/public/popup.html
@@ -138,6 +138,14 @@
           <span id="sponsorTimeSavedEndWord">__MSG_minsLower__</span></b>).
       </div>
       <footer id="sbFooter">
+        <div id="sponsorTimesDonateContainer" style="display: none; align-items: center;">
+          <img src="/icons/heart.svg"/>
+          <a id="sbConsiderDonateLink" href="https://sponsor.ajay.app/donate" target="_blank" rel="noopener">
+            __MSG_considerDonating__
+          </a>
+          <img id="sbCloseDonate" src="/icons/close.png" height="8px" style="padding-left: 5px; cursor: pointer;"/>
+        </div>
+
         <a href="https://sponsor.ajay.app" target="_blank" rel="noopener">__MSG_website__</a> |
         <a href="https://sponsor.ajay.app/stats" target="_blank" rel="noopener">__MSG_viewLeaderboard__</a> |
         <a href="https://github.com/ajayyy/SponsorBlock" target="_blank" rel="noopener">GitHub</a>
