Fix broken icons and centering

--- a/public/popup.html
+++ b/public/popup.html
@@ -138,8 +138,8 @@
           <span id="sponsorTimeSavedEndWord">__MSG_minsLower__</span></b>).
       </div>
       <footer id="sbFooter">
-        <div id="sponsorTimesDonateContainer" style="display: none; align-items: center;">
-          <img src="/icons/heart.svg"/>
+        <div id="sponsorTimesDonateContainer" style="display: none; align-items: center; justify-content: center;">
+          <img class="sbHeart" src="/icons/heart.svg"/>
           <a id="sbConsiderDonateLink" href="https://sponsor.ajay.app/donate" target="_blank" rel="noopener">
             __MSG_considerDonating__
           </a>
